--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-   " CI": "npm run build",
-    "build": "react-scripts build",
+    "build": "CI= react-scripts build",   
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
